--- a/infrastructure/controllers/redis.yaml
+++ b/infrastructure/controllers/redis.yaml
@@ -1,4 +1,13 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: redis
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  url: https://charts.bitnami.com/bitnami
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
